Fixed 37965. Fix new jdk9 deprecation warnings (new Long, new Integer,...)
Replace the now deprecated constructors by equivalent use of
- typed constant: i.e. 10 by 10L (typed long)
- autoboxing
- Long Long.valueOf, long Long.parseInt

--HG--
extra : rebase_source : b0d9912d84734d7b73478a5a69c3c5f8b55b3c8c